k3s_cluster/base/dmz/cloud/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: dmz
  labels:
    app: dmz-cloud-immich
spec:
  type: ClusterIP
  selector:
    app: dmz-cloud-immich
  ports:
    - name: web
      protocol: TCP
      port: 6604
      targetPort: 2283 # immich-server container
