k3s_cluster/base/dmz/cloud/immich/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: dmz
  labels:
    app: dmz-cloud-immich
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`immich.alt.dmz.home`)
      # no middlewares , built-in SSO auth
      services:
        - name: dmz-cloud-immich-service
          port: 6604
  #tls: {}
